feat(jwt): enhance NimbusJwtTokenProvider with improved token generation and validation; streamline claims parsing and error handling